Bug 596785 - Do not update form validity for submit controls when we remove/add an element because of a type change. r=smaug a=blocking